--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ body {
 
 header {
     display: flex;
-    justify-content: center;
+    justify-content: start;
     flex-direction: column;
     align-items: center;
     position: fixed;
@@ -37,7 +37,7 @@ header>hr {
 }
 
 nav {
-    width: 280px;
+    width: 200px;
     height: 40px;
     background-color: white;
     border-radius: 20px;
@@ -50,7 +50,7 @@ nav {
 
 nav:hover {
     cursor: pointer;
-    width: 350px;
+    width: 280px;
     height: 55px;
     transition: 0.25s ease;
 }
@@ -70,6 +70,37 @@ nav:hover {
     cursor: pointer;
     width: 45px;
     transition: 0.25s ease;
+}
+
+/* Social Networks Aside */
+
+.social-networks-nav {
+    display: flex;
+    position: fixed;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: #ffffff;
+    flex-direction: column;
+    border-radius: 20px;
+    margin-right: 20px;
+    justify-content: center;
+    align-items: center;
+}
+
+.social-network-icon {
+    width: 30px;
+    margin-right: 10px;
+    margin-left: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    transition: 0.25s ease;
+}
+
+.social-network-icon:hover {
+    cursor: pointer;
+    width: 50px;
+    transition: 0.25s ease-in-out;
 }
 
 /** MAIN **/
@@ -157,6 +188,7 @@ video {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: black;
 }
 
 #me>img {
@@ -201,6 +233,7 @@ video {
     align-items: center;
     flex-direction: column;
     color: white;
+    background-color: black;
 }
 
 #formation>p {
@@ -227,9 +260,9 @@ video {
 #projects {
     height: 100vh;
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
+    background-color: black;
 }
 
 #projects>p {
@@ -250,9 +283,9 @@ video {
     cursor: pointer;
     width: 300px;
     transition: 0.25s ease;
-    box-shadow: 0px 0px 39px -8px rgba(255,255,255,0.42);
-    -webkit-box-shadow: 0px 0px 39px -8px rgba(255,255,255,0.42);
-    -moz-box-shadow: 0px 0px 39px -8px rgba(255,255,255,0.42);
+    box-shadow: 0px 0px 39px -8px rgba(255, 255, 255, 0.42);
+    -webkit-box-shadow: 0px 0px 39px -8px rgba(255, 255, 255, 0.42);
+    -moz-box-shadow: 0px 0px 39px -8px rgba(255, 255, 255, 0.42);
 }
 
 .item-project {
@@ -265,10 +298,5 @@ video {
 .item-project>a {
     text-decoration: none;
     font-style: italic;
-}
-
-/* Social Networks Section */
-
-#social-networks {
-    height: 100vh;
+    color: white;
 }
