Corrigiendo aside bar

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,17 +75,18 @@ nav:hover {
 /* Social Networks Aside */
 
 .social-networks-nav {
-    display: flex;
-    position: fixed;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: #ffffff;
-    flex-direction: column;
-    border-radius: 20px;
-    margin-right: 20px;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  position: fixed;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: #ffffff;
+  flex-direction: column;
+  border-radius: 20px;
+  margin-right: 20px;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
 }
 
 .social-network-icon {
@@ -190,6 +191,18 @@ video {
     align-items: center;
     background-color: black;
 }
+
+.intro {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem; /* espaciado entre párrafo y botón */
+  text-align: center;
+  max-width: 800px;
+  padding: 0 1rem;
+  font-size: 20px;
+}
+
 
 #me>img {
     border-radius: 50%;
